@@ -1,7 +1,7 @@
 use inc::Module::Install;
 
 ## All the required meta information
-name     'MooseX-Types-Structured';
+name 'MooseX-Types-Structured';
 all_from 'lib/MooseX/Types/Structured.pm';
 abstract 'Moose Type Constraint classes for Structured Types';
 author 'John Napiorkowski <jjnapiork@cpan.org>';
